--- a/hw5.qmd
+++ b/hw5.qmd
@@ -1,3 +1,7 @@
+```{r}
+
+```
+
 ---
 title: "homework5"
 format: html
@@ -24,3 +28,8 @@ You can add options to executable code like this
 ```
 
 The `echo: false` option disables the printing of code (only output is displayed).
+
+```{r}
+gss_cat %>% 
+  ggplot(aes(x=tvhours,y=partyID))
+```
